--- a/src/app/pages/citas/list/list.component.html
+++ b/src/app/pages/citas/list/list.component.html
@@ -1,1 +1,28 @@
-<p>list works!</p>
+<div class="table-responsive">
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th scope="col">Nombre</th>
+          <th scope="col">Descripcion</th>
+          <th scope="col">Color</th>
+          <th scope="col">Actividad</th>
+          <th scope="col">Fecha creacion</th>
+          <th class="d-none d-sm-block" scope="col">Acciones</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="table-info" *ngFor="let item of [0,1,3,4]">
+          <th scope="row">Jorge Bolanos</th>
+          <td>Cita medica</td>
+          <td>Rojo</td>
+          <td>True</td>
+          <td>01/02/2021</td>
+          <td class="btn-goup d-none d-sm-block" role="group">
+            <button type="button" class="btn btn-warning m-1" (click)="editar(item)">Editar</button>
+            <button type="button" class="btn btn-secondary m-1" (click)="ver(item)">Ver</button>
+            <button type="button" class="btn btn-danger m-1"(click)="eliminar(item)">Eliminar</button></td>
+        </tr>
+      </tbody>
+    </table>
+</div>
+  
