Se crea modelo de datos y componente formularios

--- a/src/app/pages/citas/details/details.component.html
+++ b/src/app/pages/citas/details/details.component.html
@@ -5,28 +5,28 @@
     <div class="card-body">
       <ul class="list-group list-group-flush">
         <li class="list-group-item">
-            Id: <h5></h5>
+            Id: <h5>{{cita.id}}</h5>
         </li>
         <li class="list-group-item">
-            Nombre: <h5></h5>
+            Nombre: <h5>{{cita.nombre}}</h5>
         </li>
         <li class="list-group-item">
-            Descripcion: <h5></h5>
+            Descripcion: <h5>{{cita.descripcion}}</h5>
         </li>
         <li class="list-group-item">
-            Color: <h5></h5>
+            Color: <h5>{{cita.color}}</h5>
         </li>
         <li class="list-group-item">
-            Duracion: <h5></h5>
+            Duracion: <h5>{{cita.duracion}}Minutos</h5>
         </li>
         <li class="list-group-item">
-            Actividad: <h5></h5>
+            Actividad: <h5>{{cita.actividad}}</h5>
         </li>
         <li class="list-group-item">
-            Fecha creacion: <h5></h5>
+            Fecha creacion: <h5>{{cita.fechaCreacion}}</h5>
         </li>
         <li class="list-group-item">
-            Fecha modiciacion: <h5></h5>
+            Fecha modiciacion: <h5>{{cita.fechaEdicion}}</h5>
         </li>
       </ul>
     </div>
