--- a/src/app/pages/citas/list/list.component.html
+++ b/src/app/pages/citas/list/list.component.html
@@ -11,12 +11,12 @@
         </tr>
       </thead>
       <tbody>
-        <tr class="table-info" *ngFor="let item of [0,1,3,4]">
-          <th scope="row">Jorge Bolanos</th>
-          <td>Cita medica</td>
-          <td>Rojo</td>
-          <td>True</td>
-          <td>01/02/2021</td>
+        <tr class="table-info" *ngFor="let item of fakeData">
+          <th scope="row">{{item.nombre}}</th>
+          <td>{{item.descripcion}}</td>
+          <td>{{item.color}}</td>
+          <td>{{item.actividad}}</td>
+          <td>{{item.fechaCreacion}}</td>
           <td class="btn-goup d-none d-sm-block" role="group">
             <button type="button" class="btn btn-warning m-1" (click)="editar(item)">Editar</button>
             <button type="button" class="btn btn-secondary m-1" (click)="ver(item)">Ver</button>
