--- a/src/app/shared/components/citas-froms/citas-froms.component.html
+++ b/src/app/shared/components/citas-froms/citas-froms.component.html
@@ -1,77 +1,60 @@
-<form class="mt-3 col-md-8 offset-md-2" (ngSubmit)="onSave()" [formGroup]="citasForm">
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <input type="text" class="form-control" placeholder="Name" formControlName="id">
-        <div class="invalid-feedback">
-          <span>
-            Este campo es requerido.
-          </span>
-        </div>
-      </div>
-      <div class="form-group col-md-6">
-        <input type="text" class="form-control" placeholder="Last Name" formControlName="nombre">
-        <div class="invalid-feedback">
-          <span>
-            Este campo es requerido.
-          </span>
-        </div>
+<div class="container">
+  <form class="mt-3 col-md-8 offset-md-2" (ngSubmit)="onSave()" [formGroup]="citasForm">
+  <div class="row form-row align-items-start">
+    <div class="form-group col-md-6">
+      <input type="text" class="form-control" placeholder="Medicina general" formControlName="nombre"  [class]="isValidField('nombre')">
+      <div class="invalid-feedback">
+        <span>
+          Este campo es requerido.
+        </span>
       </div>
     </div>
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <input type="text" class="form-control" placeholder="Name" formControlName="descripcion">
-        <div class="invalid-feedback">
-          <span>
-            Este campo es requerido.
-          </span>
-        </div>
-      </div>
-      <div class="form-group col-md-6">
-        <input type="text" class="form-control" placeholder="Last Name" formControlName="color">
-        <div class="invalid-feedback">
-          <span>
-            Este campo es requerido.
-          </span>
-        </div>
+    <div class="form-group col-md-6">
+      <input type="text" class="form-control" placeholder="Descripcion cita" formControlName="descripcion"  [class]="isValidField('descripcion')">
+      <div class="invalid-feedback">
+        <span>
+          Este campo es requerido.
+        </span>
       </div>
     </div>
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <input type="text" class="form-control" placeholder="email" formControlName="duracion">
-        <div class="invalid-feedback">
-          <span>
-            Este campo es requerido.
-          </span>
-        </div>
-      </div>
-      <div class="form-group col-md-6">
-        <input type="text" class="form-control" placeholder="email" formControlName="actividad">
-        <div class="invalid-feedback">
-          <span>
-            Este campo es requerido.
-          </span>
-        </div>
+  </div>
+  <div class="m-4"></div>
+  <div class="row form-row align-items-center">
+    <div class="form-group col-md-6">
+      <input class="form-control" [(colorPicker)]="color" [style.background]="color" formControlName="color"/>
+      <div class="invalid-feedback">
+        <span>
+          Este campo es requerido.
+        </span>
       </div>
     </div>
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <input type="text" class="form-control" placeholder="Start Date 01/02/2021" formControlName="fechaCreacion">
-        <div class="invalid-feedback">
-          <span>
-            Este campo es requerido.
-          </span>
-        </div>
-      </div>
-      <div class="form-group col-md-6">
-        <input type="text" class="form-control" placeholder="Start Date 01/02/2021" formControlName="fechaEdicion">
-        <div class="invalid-feedback">
-          <span>
-            Este campo es requerido.
-          </span>
-        </div>
+    <div class="form-group col-md-4">
+      <input type="number" class="form-control" maxlength="2" placeholder="Duracion en minutos" formControlName="duracion" [class]="isValidField('duracion')">
+      <div class="invalid-feedback">
+        <span>
+          Este campo es requerido.
+        </span>
       </div>
     </div>
-    <button type="submit" class="btn bg-dark btn-block text-light">Guardar</button>
+    <div class="form-group col-md-2">
+        <span>
+          Minutos
+        </span>
+    </div>
+  </div>
+  <div class="row form-row align-items-center">
+    <div class="form-group col-md-6">
+      <legend>Actividad</legend>
+      <div class="form-check form-switch">
+        <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" formControlName="actividad" >
+      </div>
+    </div>
+  </div>
+
+  <div class="mt-4">
+    <button type="submit" [disabled]="!citasForm.valid" class="btn bg-dark btn-block text-light">Guardar</button>
+  </div>  
   </form>
+</div>
 <button type="button" class="btn btn-secondary mt-2" (click)="volver()">Volver</button>
   
